Changed css to work reactively in a way that prevents the overflow of waiter side view when its too big. Added clickable image to waiter pages.

--- a/myapp/src/css/Waiter.css
+++ b/myapp/src/css/Waiter.css
@@ -6,8 +6,8 @@
     margin-top: 30px;
     margin-left: 30px;
     border: 5px solid #f8cb2e;
-    width: 43%;
-    height: 80%;
+    width: fit-content;
+    height: fit-content;
 }
 
 .orderContainer {
@@ -72,5 +72,5 @@
 @font-face{
     font-family: "Bayon";
     src: local(Bayon-Regular),
-    url("./fonts/Bayon-Regular.ttf") format("truetype");
+    url("../fonts/Bayon-Regular.ttf") format("truetype");
 }
